feat: delete and detail app
